# tcxx-23

./: .gitignore  CMakeLists.txt  README.md  local-ci.sh
cmake/: Coverage.cmake  Dependencies.cmake
examples/math/: README.md  interval.h  intervalerr.h  intervalty.h  policies.h
include/err/: error_info.h
test/: CMakeLists.txt  test_err_info.cpp  test_example_math.cpp
